// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job v2 actions/reducer should enqueueJob 1`] = `
Object {
  "active": Set {
    "0264dcc4010e386cf4a9e94dc9e94af4",
  },
  "done": Map {},
  "stale": Map {
    "0264dcc4010e386cf4a9e94dc9e94af4" => Object {
      "job": Object {
        "args": Object {},
        "contentDigest": "0264dcc4010e386cf4a9e94dc9e94af4",
        "id": "1234",
        "inputPaths": Array [],
        "name": "TEST_JOB",
        "outputDir": "public/static",
        "plugin": Object {
          "name": "test-plugin",
          "version": "1.0.0",
        },
      },
      "plugin": Object {
        "name": "test-plugin",
        "version": "1.0.0",
      },
    },
  },
}
`;

exports[`Job v2 actions/reducer should enqueueJob 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {},
        "contentDigest": "0264dcc4010e386cf4a9e94dc9e94af4",
        "id": "1234",
        "inputPaths": Array [],
        "name": "TEST_JOB",
        "outputDir": "public/static",
        "plugin": Object {
          "name": "test-plugin",
          "version": "1.0.0",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
